--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,20 @@
     <build>
         <!-- 统一插件管理 -->
         <pluginManagement>
-
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <configuration>
+                        <excludes>
+                            <exclude>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                            </exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+            </plugins>
         </pluginManagement>
     </build>
 
