--- a/tediouscatblog-web/pom.xml
+++ b/tediouscatblog-web/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.tediouscat</groupId>
         <artifactId>tediouscatblog-springboot</artifactId>
-        <version>{revision}</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>com.tediouscat</groupId>
