--- a/tediouscatblog-module-common/pom.xml
+++ b/tediouscatblog-module-common/pom.xml
@@ -2,35 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<!-- 指定父项目为 weblog-springboot -->
-	<parent>
-		<groupId>com.tediouscat</groupId>
-		<artifactId>tediouscatblog-springboot</artifactId>
-		<version>${revision}</version>
-	</parent>
+    <parent>
+        <groupId>com.tediouscat</groupId>
+        <artifactId>tediouscatblog-springboot</artifactId>
+        <version>${revision}</version>
+    </parent>
 
-	<groupId>com.tediouscat</groupId>
-	<artifactId>tediouscatblog-module-admin</artifactId>
-	<name>tediouscatblog-module-admin</name>
-	<description>tediouscatblog-admin (负责管理后台相关功能)</description>
+    <groupId>com.tediouscat</groupId>
+    <artifactId>tediouscatblog-module-common</artifactId>
+    <name>tediouscatblog-module-common</name>
+    <description>tediouscatblog-module-common (此模块用于存放一些通用的功能)</description>
 
     <dependencies>
-		<!-- 免写冗余的 Java 样板式代码 -->
+        <!-- 免写冗余的 Java 样板式代码 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-		<!-- 单元测试 -->
+        <!-- 常用工具库 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <!-- 单元测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.tediouscat</groupId>
-            <artifactId>tediouscatblog-module-common</artifactId>
         </dependency>
     </dependencies>
 
