--- a/tediouscatblog-web/pom.xml
+++ b/tediouscatblog-web/pom.xml
@@ -41,6 +41,11 @@
             <groupId>com.tediouscat</groupId>
             <artifactId>tediouscatblog-module-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
