--- a/tediouscatblog-module-admin/pom.xml
+++ b/tediouscatblog-module-admin/pom.xml
@@ -32,6 +32,13 @@
             <groupId>com.tediouscat</groupId>
             <artifactId>tediouscatblog-module-common</artifactId>
         </dependency>
+        <!-- knife4j -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
