--- a/tediouscatblog-module-common/pom.xml
+++ b/tediouscatblog-module-common/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+        </dependency>
+
 
     </dependencies>
 
