--- a/tediouscatblog-module-admin/pom.xml
+++ b/tediouscatblog-module-admin/pom.xml
@@ -37,6 +37,17 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tediouscat</groupId>
+            <artifactId>tediouscatblog-module-jwt</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
 
 
     </dependencies>
