--- a/tediouscatblog-module-common/pom.xml
+++ b/tediouscatblog-module-common/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>p6spy</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
 
 
     </dependencies>
