--- a/tediouscatblog-module-admin/pom.xml
+++ b/tediouscatblog-module-admin/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+
 
 
 
