文件上传接口开发

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
         <p6spy.version>3.9.1</p6spy.version>
         <jjwt.version>0.11.2</jjwt.version>
+        <minio.version>8.2.1</minio.version>
 
     </properties>
 
@@ -102,8 +103,8 @@
                 <version>${mybatis-plus.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.quanxiaoha</groupId>
-                <artifactId>weblog-module-jwt</artifactId>
+                <groupId>com.tediouscat</groupId>
+                <artifactId>tediouscatblog-module-jwt</artifactId>
                 <version>${revision}</version>
             </dependency>
             <!--   JWT   -->
@@ -121,6 +122,12 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-jackson</artifactId>
                 <version>${jjwt.version}</version>
+            </dependency>
+            <!-- 对象存储 Minio -->
+            <dependency>
+                <groupId>io.minio</groupId>
+                <artifactId>minio</artifactId>
+                <version>${minio.version}</version>
             </dependency>
 
         </dependencies>
