--- a/tediouscatblog-module-admin/pom.xml
+++ b/tediouscatblog-module-admin/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <!-- 对象存储 Minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
+
+
 
 
 
